# terrafind

./: .dockerignore  .env.example  .gitignore  LICENCE.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/appsfolio/core/: apps.py  tests.py  views.py
backend/appsfolio/core/management/commands/: import_dvf.py
backend/appsfolio/place/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/appsfolio/place/migrations/: 0001_initial.py
backend/appsfolio/place/tests/: test_api.py  test_models.py
backend/appsfolio/transaction/: admin.py  aggregates.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/appsfolio/transaction/migrations/: 0001_initial.py  0002_remove_venteparcelle_transaction_type_lo_bae0a4_idx_and_more.py
backend/appsfolio/transaction/tests/: test_api.py  test_models.py
backend/appsfolio/users/: apps.py  models.py
backend/appsfolio/users/migrations/: 0001_initial.py
backend/project/: settings.py  urls.py
frontend/: Dockerfile  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: filters.cy.ts  ordering.cy.ts  pagination.cy.ts  search.cy.ts
frontend/cypress/fixtures/: stats.json  ventes.json
frontend/cypress/support/: e2e.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: Footer.tsx  Hero.tsx  Navbar.tsx  Pagination.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx  Sidebar.tsx  SortSelect.tsx  Spinner.tsx  StatsBar.tsx
(+21 files in other folders)
