[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.11",
    "duckdb>=1.2.2",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["tests.py", "test_*.py"]
